{
    "name": "VRControls",
    "maps": [
        {
            "name": "OculusTouchControllers",
            "id": "2fba5a16-45d1-4043-9557-6c04e7ea9f53",
            "actions": [
                {
                    "name": "AButton",
                    "type": "Button",
                    "id": "06cbca17-ba1c-42eb-9ee3-11969e6d8a48",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightTrigger",
                    "type": "Value",
                    "id": "40c8e5f9-bf25-4118-a880-be223ac7b09d",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftTrigger",
                    "type": "Value",
                    "id": "7c6dd3a4-1f88-4556-8022-573a514be659",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightJoyStick",
                    "type": "Value",
                    "id": "d1773e3c-bbf3-4594-9ba7-2e10528a7eca",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d7dfcdc4-7a57-4ca2-bcd8-379e21662b83",
                    "path": "<XRController>{RightHand}/{PrimaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "94a44e48-8551-43f8-9000-27582ea6ff11",
                    "path": "<XRController>{RightHand}/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3d73f9ed-9f2d-43f8-ac85-03dccf467177",
                    "path": "<XRController>{LeftHand}/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c5cf5c22-b65c-4f38-bc43-a22e934d2729",
                    "path": "<OculusTouchController>{RightHand}/{Primary2DAxis}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightJoyStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}